# bugsplat-crashpad

./: .gitignore  CMakeLists.txt  README.md  crash.cpp  env.example  main.cpp  main.h  paths.cpp  paths.h  windows.cpp  windows.h
.github/workflows/: crashpad.yml
scripts/: build_crashpad_linux.sh  build_crashpad_linux_arm64.sh  build_crashpad_macos.sh  build_crashpad_windows_msvc.bat  build_crashpad_windows_msvc.ps1  build_linux.sh  build_linux_arm64.sh  build_macos.sh  build_windows_mingw.bat  build_windows_msvc.bat  build_windows_msvc.ps1  symbol_upload_linux.sh  symbol_upload_macos.sh  symbol_upload_windows.ps1  upload_symbols.bat  upload_symbols.ps1  upload_symbols.sh
